redid the statistics
