# backend/services/stat/delivery/http/handler.go
@@ -18,24 +18,6 @@ func NewHandler(useCase stat.UseCase) *Handler {
 	}
 }
 
-// GetProjectStat @Summary Get project statistics
-// @Description Get project visits by day in 30 days
-// @Tags Stat
-// @Accept json
-// @Produce json
-// @Success 200 {object} map[string][]stat.ProjectsStats
-// @Router /api/stat/projects [get]
-func (h *Handler) GetProjectStat(c *gin.Context) {
-	statsProjects, err := h.useCase.GetProjectStat()
-
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
-		return
-	}
-
-	c.JSON(200, gin.H{"data": statsProjects})
-}
-
 // GetVisits @Summary Get session statistics
 // @Description Get information about site visits, including the number of visits, unique visits, top countries, top browsers and top OS
 // @Tags Stat
@@ -83,12 +65,18 @@ func (h *Handler) VisitExtend(c *gin.Context) {
 // @Produce json
 // @Param un query int true "Unique visit or not (0 - not unique, 1 - unique)"
 // @Param utm query string false "UTM tag ID (optional parameter)"
+// @Param url query string false "URL Page"
+// @Param title query string false "Title Page"
+// @Param session query string false "Session (if user yet visited website)"
 // @Success 200 {object} stat.SessionResponse "Successful registration of the session and return of the session ID"
 // @Failure 400
 // @Router /api/stat/update/visit [put]
 func (h *Handler) SetVisit(c *gin.Context) {
 	un := c.DefaultQuery("un", "0")
 	utm := c.DefaultQuery("utm", "")
+	url := c.DefaultQuery("url", "/")
+	title := c.DefaultQuery("title", "untitled")
+	session := c.DefaultQuery("session", "")
 
 	unique := un == "1"
 
@@ -99,7 +87,7 @@ func (h *Handler) SetVisit(c *gin.Context) {
 	}
 
 	userAgent := c.Request.Header.Get("User-Agent")
-	session, err := h.useCase.AddVisit(c.ClientIP(), userAgent, utm, httpReferer, unique)
+	session, err := h.useCase.AddVisit(c.ClientIP(), userAgent, utm, httpReferer, url, title, session, unique)
 
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
@@ -107,31 +95,6 @@ func (h *Handler) SetVisit(c *gin.Context) {
 	}
 
 	c.JSON(200, stat.SessionResponse{Session: session})
-}
-
-// UpdateProjectsStat @Summary Updating the statistics of visits to the project
-// @Description Increments the number of project visits by 1 for the current day
-// @Tags Stat
-// @Accept json
-// @Produce json
-// @Param uuid path string true "project id"
-// @Success 200 "Successful statistics update"
-// @Router /api/stat/update/projects/{uuid} [put]
-func (h *Handler) UpdateProjectsStat(c *gin.Context) {
-	var project stat.StatUpdateParam
-	if err := c.ShouldBindUri(&project); err != nil {
-		c.JSON(400, gin.H{"message": "not uuid"})
-		return
-	}
-
-	updateErr := h.useCase.AddProjectVisit(project.ID)
-
-	if updateErr != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"message": updateErr.Error()})
-		return
-	}
-
-	c.Status(200)
 }
 
 // GetLinks @Summary Get links statistics
